--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,12 @@
 #root {
-  max-width: 1280px;
+  max-width: 720px;
+  background-image: linear-gradient(to left,pink,orange);
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+  justify-content: center;
+  scrollbar-width: thin;
+  scrollbar-color: rgb(255, 225, 27) chocolate;
 }
 
 .card {
@@ -40,3 +16,15 @@
 .read-the-docs {
   color: #888;
 }
+
+.inputUser {
+  margin-bottom: 10px;
+}
+
+.buttonUser {
+  margin-bottom: 5px;
+}
+.root::-webkit-scrollbar {
+  border-radius: 8px;
+}
+.root::-webkit-scrollbar-thumb { border-radius: 10px; }
